fix shadow on the home page, changes png pics for jpgs pics, fixed height on logo (was crashing on ie)

--- a/app/assets/stylesheets/section/home.scss
+++ b/app/assets/stylesheets/section/home.scss
@@ -3,7 +3,7 @@
 body {
   .content {
     .home {
-      background: url('/assets/home/bg-middle-home.png') no-repeat;
+      background: url('/assets/home/bg-middle-home.jpg') no-repeat;
       overflow:hidden;
       .model {
         margin:0 0 0px -12px;
